--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "cp src/index.html public",
+    "build": "mkdir -p public && cp src/index.html public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
