--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "mkdir -p public && cp src/index.html public",
     "start": "env $(cat .env | xargs) netlify dev",
+    "env": "env $(cat .env | xargs)",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
