--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "mkdir -p public && cp src/index.html public",
+    "build": "mkdir -p public && cp src/* public",
     "start": "env $(cat .env | xargs) netlify dev",
     "env": "env $(cat .env | xargs)",
     "test": "echo \"Error: no test specified\" && exit 1"
