--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "mkdir -p public && cp src/* public",
-    "start": "env $(cat .env | xargs) netlify dev",
+    "start": "npm run build && env $(cat .env | xargs) netlify dev",
     "env": "env $(cat .env | xargs)",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
