--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "auth0-js": "^9.14.0",
     "faunadb": "^3.0.1",
-    "ssb-keys": "^8.0.0"
+    "ssb-keys": "^8.0.0",
+    "stripe": "^8.125.0"
   },
   "devDependencies": {
     "netlify-cli": "^2.68.5"
