--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "watch-css": "node-sass --watch src/style.scss --source-map-embed public/style.css",
     "build": "mkdir -p public && cp src/* public && npm run build-css",
     "env": "env $(cat .env | xargs)",
-    "lambda": "netlify-lambda serve functions/",
     "test": "tape test/*.js | tap-spec"
   },
   "repository": {
@@ -25,7 +24,9 @@
   "dependencies": {
     "auth0-js": "^9.14.0",
     "faunadb": "^3.0.1",
+    "monotonic-timestamp": "0.0.9",
     "ssb-keys": "^8.0.0",
+    "ssb-validate": "^4.1.3",
     "stripe": "^8.125.0"
   },
   "devDependencies": {
