--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/nichoth/ssc#readme",
   "dependencies": {
     "auth0-js": "^9.14.0",
+    "chloride": "^2.3.0",
     "faunadb": "^3.0.1",
     "monotonic-timestamp": "0.0.9",
     "ssb-keys": "^8.0.0",
