--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "watch-css": "node-sass --watch src/style.scss --source-map-embed public/style.css",
     "build": "mkdir -p public && cp src/* public && npm run build-css",
     "env": "env $(cat .env | xargs)",
+    "postversion": "git push && git push --tags",
     "test": "tape test/*.js | tap-spec"
   },
   "repository": {
@@ -28,7 +29,8 @@
     "monotonic-timestamp": "0.0.9",
     "ssb-keys": "^8.0.0",
     "ssb-validate": "^4.1.3",
-    "stripe": "^8.125.0"
+    "stripe": "^8.125.0",
+    "xtend": "^4.0.2"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
