--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "watch-css": "node-sass --watch src/style.scss --source-map-embed public/style.css",
     "build": "mkdir -p public && cp src/* public && npm run build-css",
     "postversion": "git push && git push --tags",
+    "test-here": "tape test/*.js | tap-spec",
     "test": "tape test/*.js | tap-spec && tape test-ntl/*.js | tap-spec"
   },
   "repository": {
@@ -25,9 +26,8 @@
     "auth0-js": "^9.14.0",
     "chloride": "^2.3.0",
     "faunadb": "^3.0.1",
+    "is-canonical-base64": "^1.1.1",
     "monotonic-timestamp": "0.0.9",
-    "ssb-keys": "^8.0.0",
-    "ssb-validate": "^4.1.3",
     "stripe": "^8.125.0",
     "xtend": "^4.0.2"
   },
@@ -36,6 +36,7 @@
     "got": "^11.8.0",
     "netlify-cli": "^2.69.3",
     "node-sass": "^5.0.0",
+    "ssb-keys": "^8.0.0",
     "tap-spec": "^5.0.0",
     "tape": "^5.0.1"
   }
