--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
   "dependencies": {
     "chloride": "^2.3.0",
     "is-canonical-base64": "^1.1.1",
-    "monotonic-timestamp": "0.0.9"
+    "monotonic-timestamp": "0.0.9",
+    "ssb-keys": "^8.1.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
     "node-sass": "^5.0.0",
-    "ssb-keys": "^8.1.0",
     "tap-spec": "^5.0.0",
     "tape": "^5.0.1"
   }
