--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "chloride": "^2.3.0",
     "is-canonical-base64": "^1.1.1",
+    "json-stable-stringify": "^1.0.1",
     "monotonic-timestamp": "0.0.9",
     "ssb-keys": "^8.1.0"
   },
