--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "",
   "version": "0.0.16",
   "main": "index.js",
+  "bin": {
+      "ssc": "./cli.js"
+  },
   "scripts": {
     "start": "npm run build && concurrently --kill-others \"env $(cat .env | xargs) netlify dev\" \"npm run watch-css\"",
     "build-css": "node-sass --output-style=compressed src/style.scss > public/style.css",
