--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "watch-css": "node-sass --watch src/style.scss --source-map-embed public/style.css",
     "build": "mkdir -p public && cp src/* public && npm run build-css",
     "postversion": "git push && git push --tags && npm publish",
-    "test": "tape test/*.js | tap-spec"
+    "test": "tape test/index.js | tap-spec",
+    "test-web": "browserify test/web.js -p esmify | tape-run | tap-spec"
   },
   "repository": {
     "type": "git",
@@ -28,13 +29,17 @@
     "chloride": "^2.3.0",
     "is-canonical-base64": "^1.1.1",
     "json-stable-stringify": "^1.0.1",
+    "keystore-idb": "^0.15.0",
     "monotonic-timestamp": "0.0.9",
     "ssb-keys": "^8.1.0"
   },
   "devDependencies": {
+    "browserify": "^17.0.0",
     "concurrently": "^5.3.0",
+    "esmify": "^2.1.1",
     "node-sass": "^5.0.0",
     "tap-spec": "^5.0.0",
-    "tape": "^5.0.1"
+    "tape": "^5.0.1",
+    "tape-run": "^9.0.0"
   }
 }
