--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "monotonic-timestamp": "0.0.9",
     "ssb-keys": "^8.1.0",
     "ucans": "^0.7.2",
+    "uint8arrays": "^3.0.0",
     "webnative": "^0.28.0"
   },
   "devDependencies": {
