--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "bugs": {
     "url": "https://github.com/nichoth/ssc/issues"
   },
+  "browser": {
+    "crypto": false
+  },
   "homepage": "https://github.com/nichoth/ssc#readme",
   "dependencies": {
     "chloride": "^2.3.0",
