--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "",
   "version": "0.0.18",
   "main": "index.js",
+  "type": "module",
   "bin": {
     "ssc": "./cli.js"
   },
@@ -10,7 +11,7 @@
     "build-web": "browserify -p esmify web.js",
     "build-example": "browserify -p esmify example/index.js > example/bundle.js",
     "postversion": "git push && git push --tags && npm publish",
-    "test": "tape test/index.js | tap-spec",
+    "test": "tape test/index.js -p esmify | tap-spec",
     "test-web": "browserify --debug -p esmify test/web.js | tape-run | tap-spec",
     "start": "npm run build-example && npm run serve",
     "serve": "budo example/index.js:bundle.js --dir=example/ --live --pushstate --open -- -p esmify -dv"
@@ -32,7 +33,7 @@
     "chloride": "^2.3.0",
     "is-canonical-base64": "^1.1.1",
     "json-stable-stringify": "^1.0.1",
-    "keystore-idb": "git+https://github.com/nichoth/keystore-idb.git",
+    "keystore-idb": "github:nichoth/keystore-idb",
     "monotonic-timestamp": "0.0.9",
     "ssb-keys": "^8.1.0",
     "ucans": "^0.7.2",
