--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "chloride": "^2.3.0",
     "is-canonical-base64": "^1.1.1",
     "json-stable-stringify": "^1.0.1",
-    "keystore-idb": "github:nichoth/keystore-idb",
+    "keystore-idb": "^0.15.4",
     "monotonic-timestamp": "0.0.9",
     "ssb-keys": "^8.1.0",
     "ucans": "^0.8.0",
