--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "json-stable-stringify": "^1.0.1",
     "keystore-idb": "^0.15.4",
     "monotonic-timestamp": "0.0.9",
+    "one-webcrypto": "^1.0.3",
     "ssb-keys": "^8.1.0",
     "uint8arrays": "^3.0.0",
     "webnative": "^0.28.0"
