write messages in node

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "",
   "version": "0.1.1",
   "main": "index.js",
+  "type": "module",
   "bin": {
     "ssc": "./cli.js"
   },
@@ -29,6 +30,7 @@
   },
   "homepage": "https://github.com/nichoth/ssc#readme",
   "dependencies": {
+    "brittle": "^2.2.6",
     "chloride": "^2.3.0",
     "is-canonical-base64": "^1.1.1",
     "json-stable-stringify": "^1.0.1",
