add writing msgs before web test

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build-example": "browserify -p esmify example/index.js > example/bundle.js",
     "postversion": "git push && git push --tags && npm publish",
     "test": "tape test/index.js -p esmify | tap-spec",
-    "test-web": "browserify --debug -p esmify test/web.js | tape-run | tap-spec",
+    "test-web": "npm run write-test-msgs && browserify --debug -p esmify test/web.js | tape-run | tap-spec",
+    "write-test-msgs": "node test/write-node.js",
     "start": "npm run build-example && npm run serve",
     "serve": "budo example/index.js:bundle.js --dir=example/ --live --pushstate --open -- -p esmify -dv"
   },
