bundling works, tests pass

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build-example": "browserify -p esmify example/index.js > example/bundle.js",
     "postversion": "git push && git push --tags && npm publish",
     "test": "tape test/index.js -p esmify | tap-spec",
-    "test-web": "npm run write-test-msgs && browserify --debug -p esmify test/web.js | tape-run | tap-spec",
+    "test-web": "npm run write-test-msgs && browserify --debug -p esmify test/web.js -t [ envify --NODE_ENV browser ] | tape-run | tap-spec",
     "write-test-msgs": "node test/write-node.js",
     "start": "npm run build-example && npm run serve",
     "serve": "budo example/index.js:bundle.js --dir=example/ --live --pushstate --open -- -p esmify -dv"
@@ -44,6 +44,7 @@
   "devDependencies": {
     "browserify": "^17.0.0",
     "budo": "^11.6.4",
+    "envify": "^4.1.0",
     "esmify": "^2.1.1",
     "tap-spec": "^5.0.0",
     "tape": "^5.0.1",
