--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build-web": "browserify -p esmify web.js",
     "build-example": "browserify -p esmify example/index.js > example/bundle.js",
     "postversion": "git push && git push --tags && npm publish",
-    "test": "tape test/index.js -p esmify | tap-spec",
+    "test": "npm run test-node && npm run test-web",
+    "test-node": "tape test/index.js | tap-spec",
     "test-web": "npm run write-test-msgs && browserify --debug -p esmify test/web.js -t [ envify --NODE_ENV browser ] | tape-run | tap-spec",
     "write-test-msgs": "node test/write-node.js",
     "start": "npm run build-example && npm run serve",
