--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build-example": "browserify -p esmify example/index.js > example/bundle.js",
     "postversion": "git push && git push --tags && npm publish",
     "test": "npm run test-node && npm run test-web",
-    "test-node": "tape test/index.js | tap-arc",
-    "test-web": "browserify --debug -p esmify test/web.js -t [ envify --NODE_ENV browser ] | tape-run | tap-arc",
+    "test-node": "tape test/*.js | tap-arc",
+    "test-web": "browserify --debug -p esmify test/web/index.js -t [ envify --NODE_ENV browser ] | tape-run | tap-arc",
     "//write-test-msgs": "node test/write-node.js",
     "start": "npm run build-example && npm run serve",
     "serve": "budo example/index.js:bundle.js --dir=example/ --live --pushstate --open -- -p esmify -dv"
