--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "monotonic-timestamp": "0.0.9",
     "one-webcrypto": "^1.0.3",
     "ssb-keys": "^8.1.0",
-    "ucans": "^0.8.0",
+    "ucans": "github:nichoth/ts-ucan",
     "uint8arrays": "^3.0.0",
     "webnative": "^0.28.0"
   },
