--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-example": "browserify -p esmify example/index.js > example/bundle.js",
     "postversion": "git push && git push --tags && npm publish",
     "test": "npm run test-node && npm run test-web && npm run test-ucan",
+    "test-ucan-web-one": "browserify --debug -p esmify test/ucan/web-one.js -t [ envify --NODE_ENV browser ] | tape-run | tap-arc",
     "test-node": "tape test/*.js | tap-arc",
     "test-web": "browserify --debug -p esmify test/web/index.js -t [ envify --NODE_ENV browser ] | tape-run | tap-arc",
     "test-ucan": "browserify --debug -p esmify test/web/ucan.js -t [ envify --NODE_ENV browser ] | tape-run | tap-arc",
@@ -40,6 +41,7 @@
     "monotonic-timestamp": "0.0.9",
     "one-webcrypto": "^1.0.3",
     "ssb-keys": "^8.1.0",
+    "//": "nichoth/ts-ucan so we can use the latest API, but have some stability",
     "ucans": "github:nichoth/ts-ucan",
     "uint8arrays": "^3.0.0",
     "webnative": "^0.28.0"
