--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "chloride": "^2.3.0",
     "is-canonical-base64": "^1.1.1",
     "json-stable-stringify": "^1.0.1",
-    "keystore-idb": "^0.15.4",
+    "keystore-idb": "github:nichoth/keystore-idb",
     "monotonic-timestamp": "0.0.9",
     "one-webcrypto": "^1.0.3",
     "ssb-keys": "^8.1.0",
