--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "monotonic-timestamp": "0.0.9",
     "one-webcrypto": "^1.0.3",
     "ssb-keys": "^8.1.0",
+    "ucan-storage": "^1.1.3",
     "ucans": "github:nichoth/ts-ucan",
     "uint8arrays": "^3.0.0",
     "webnative": "^0.28.0"
@@ -52,7 +53,7 @@
     "budo": "^11.6.4",
     "concurrently": "^7.0.0",
     "envify": "^4.1.0",
-    "esmify": "^2.1.1",
+    "esmify": "github:nichoth/esmify",
     "tap-arc": "^0.1.2",
     "tape": "^5.0.1",
     "tape-run": "github:nichoth/tape-run"
