--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "test-web-ucan": "concurrently --kill-others \"node ./test/ucan/test-server\" \"npm run test-ucan-browser\"",
     "test-ucan-browser": "browserify --debug -p esmify test/ucan/browser.js -t [ envify --NODE_ENV browser ] | tape-run | tap-arc",
     "test-node": "tape test/*.js | tap-arc",
-    "test-web": "browserify --debug -p esmify test/web/index.js -t [ envify --NODE_ENV browser ] | tape-run | tap-arc",
+    "browserify-test-web": "browserify --debug -p esmify test/web/index.js -t [ envify --NODE_ENV browser ] | tape-run | tap-arc",
     "test-ucan": "browserify --debug -p esmify test/web/ucan.js -t [ envify --NODE_ENV browser ] | tape-run | tap-arc",
+    "test-web": "concurrently --kill-others \"node ./test/web/test-server\" \"npm run browserify-test-web\"",
     "start": "npm run build-example && npm run serve",
     "serve": "budo example/index.js:bundle.js --dir=example/ --live --pushstate --open -- -p esmify -dv"
   },
