--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
     "webnative": "^0.28.0"
   },
   "devDependencies": {
+    "@nichoth/base64pad": "^0.0.0",
     "browserify": "^17.0.0",
     "budo": "^11.6.4",
     "concurrently": "^7.0.0",
     "envify": "^4.1.0",
     "esmify": "github:nichoth/esmify",
+    "ssc-keys": "^0.0.2",
     "tap-arc": "^0.1.2",
     "tape": "^5.0.1",
     "tape-run": "github:nichoth/tape-run"
