--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ssc": "./cli.js"
   },
   "scripts": {
-    "build-web": "browserify -p esmify web.js",
+    "build-web": "browserify -p esmify web/index.js",
     "build-example": "browserify -p esmify example/index.js > example/bundle.js",
     "postversion": "git push && git push --tags && npm publish",
     "test": "npm run test-node && npm run test-web && npm run test-ucan",
@@ -36,6 +36,7 @@
   "homepage": "https://github.com/nichoth/ssc#readme",
   "//comment": "nichoth/ts-ucan so we can use the latest API, but have some stability",
   "dependencies": {
+    "@nichoth/multihash": "^0.5.2",
     "chloride": "^2.3.0",
     "concat-stream": "^2.0.0",
     "is-canonical-base64": "^1.1.1",
