--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.13.0",
   "main": "index.js",
   "type": "module",
+  "browser": "web/index.js",
   "bin": {
     "ssc": "./cli.js"
   },
@@ -29,9 +30,6 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/nichoth/ssc/issues"
-  },
-  "browser": {
-    "crypto": false
   },
   "homepage": "https://github.com/nichoth/ssc#readme",
   "//comment": "nichoth/ts-ucan so we can use the latest API, but have some stability",
